2000-07-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/Makefile.postabmle: Create directory for DTDs if needed

2000-07-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpHandle.m: fix error resetting size of data to be read -
	could cause occasional crashes!

2000-07-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Update to use GSIMap rather than NSMap in
	order to regain performance lost by adding code to ensure that reply
	packets cannot be leaked.  Fixed error in old connection code - due
	to a typing error a line had got deleted that was removing the
	connection from the global table on deallocation.
	* Source/NSPortNameServer.m: Fix to avoid errors when given bad
	nameserver IP address info.

2000-07-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Makefile.preamble: define GS_NEW_DO to specify whether the
	new or the old DO code is to be used.  Change the define and
	rebuild the library if you need the old DO code.
	Advantages of new code -
	  MacOS-X compatibly
	  Should work between different processor architectures and word sizes
	  Might work for inter-thread communication
	  Approx 25% faster
	  Permit packet authentication/encryption
	Disadvantages -
	  not well tested - development version
	  removed many old methods.
	* Headers/gnustep/base/GSConnection.h: removed - merged into
	NSConnection.h
	* Headers/gnustep/base/GSPortCoder.h: removed - merged into
	NSPortCoder.h
	* Source/GSConnection.m: removed - merged into NSConnection.m
	* Source/GSPortCoder.m: removed - merged into NSPortCoder.m
	* Source/NSPortNameServer.m: Use GS_NEW_DO define to determine
	default port class
	* Documentation/gsdoc/NSConnection.gsdoc: Added descriptions of
	all the methods in the new implementation.  The class is
	perilously close to being fully documented!
	* Documentation/gsdoc/...: updated all files to use new dtd.

2000-07-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSConnection.m: Improved coder caching and added code for